# SARIMA_rolling

./: README.md  linear_fit.c  plot.py
data/: IPCLK_mean_data.txt
plot_py/: plot_results.py
src/: CMakeLists.txt  linear_fit.c  linear_fit.h  load_matrix.c  load_matrix.h  mean_fit.c  mean_fit.h
test/: CMakeLists.txt  sarimatest.c
